[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "citybrain-platform"
version = "0.3.4"
authors = [
    { name = "citybrain", email = "opensource@citybrain.org" },
]
description = "This library provides convenient access to the Citybrain Platform API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "uplink",
    "requests",
    "dacite"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/citybrain-platform/python-library"
"Bug Tracker" = "https://github.com/citybrain-platform/python-library/issues"
